changing ROI modal spacing

--- a/wisccc/templates/wisccc/wisc_cc_scenario.html
+++ b/wisccc/templates/wisccc/wisc_cc_scenario.html
@@ -356,9 +356,11 @@
             scenario_text += "Cover crop samples were gathered by farmers from a 2x2 foot square and "
             scenario_text += "taken before a hard frost in the fall or before planting a cash crop in the spring. "
             scenario_text += "We figured a cost per acre for nitrogen based on an estimate of $0.52/lb for urea. "
+            scenario_text += "<br>"
             scenario_text += "Caveats: Of course not all of the above ground nitrogen in the cover crop will "
             scenario_text += "be available to growing plants in the following season depending on decomposition "
             scenario_text += "rates and other factors. "
+            scenario_text += "<br>"
             scenario_text += "Also, this ROI is estimated only for the planting season following the cover crop, "
             scenario_text += "and does not include additional soil health benefits, such as increased water storage, "
             scenario_text += "flood mitigation, or increased organic matter. "
