adding in note about costs being unavailable

--- a/wisccc/templates/wisccc/wisc_cc_scenario.html
+++ b/wisccc/templates/wisccc/wisc_cc_scenario.html
@@ -1246,6 +1246,8 @@
                         "</b>" +
                         "The estimate is based on lab analysis of lbs/acre of N " +
                         "divided by the reported seed and planting costs. ";
+                } else {
+                    text_scenario_details += "We could not estimate the ROI because planting and seed costs were not available from this farmer."
                 }
 
 
