small typo in scenario; reponse table now sorts properly

--- a/wisccc/templates/wisccc/wisc_cc_scenario.html
+++ b/wisccc/templates/wisccc/wisc_cc_scenario.html
@@ -1322,8 +1322,8 @@
                     "<b>" + roi.toFixed(1) + "</b>" +
                     ", based on the estimated tons of biomass produced and the forage quality as measured by RFQ. " +
                     "We used the " +
-                    '<a href="https://cropsandsoils.extension.wisc.edu/hay-market-report/" target="_blank" rel = "noopener noreferrer"> Hay Market Report</a>. ' +
-                    " to estimate the price of this forage by assuming the average price for a large round bale of hay. " +
+                    '<a href="https://cropsandsoils.extension.wisc.edu/hay-market-report/" target="_blank" rel = "noopener noreferrer"> Hay Market Report </a> ' +
+                    "to estimate the price of this forage by assuming the average price for a large round bale of hay. " +
                     "The estimated income from the hay is then divided by seed and planting costs. " +
                     'This ROI does not include costs for mechanical harvest (mowing, raking, baling, etc.). ' +
                     'Those costs can be estimated using  ' +
