forgot the response table changes

--- a/wisccc/templates/wisccc/response_table.html
+++ b/wisccc/templates/wisccc/response_table.html
@@ -7,7 +7,17 @@
 
 {% block content %}
 <style>
+  .container {
+    display: flex
+  }
 
+  .container a {
+
+    margin: 0px;
+    /* top right bottom left*/
+    padding: 5px 5px 5px 5px;
+
+  }
 </style>
 <div class="row justify-content-center">
   <div class="col-lg-12">
