typo and text changes to homepage

--- a/wisccc/templates/wisccc/wisc_cc_home.html
+++ b/wisccc/templates/wisccc/wisc_cc_home.html
@@ -14,9 +14,10 @@
       <div class="card-body">
         <h3 class="card-title">Welcome</h3>
         <p>
-          Since 2020, farmers around Wisconsin have shared cover crop and other soil health practices with us.
-          Each colored dot on the map represents one of their fields.
-          Click the map or graph images to explore the data.
+          Since 2020 farmers around Wisconsin have shared cover crop practices and samples to help create a shareable
+          database of real world cover crop results.
+          Click the map or graph images to explore the data, or the scenario
+          tool to see farms grouped by their cover cropping goals.
 
         </p>
 
@@ -63,7 +64,7 @@
               <h5 class="card-title">Survey for 2025</h5>
               <p class="card-text">
                 Registration is closed for the 2025-6 season.
-                If you are interested in particlipating in the project or learning more about the project,
+                If you are interested in participating in the project or learning more about the project,
                 please click below.
               </p>
               <a href="{% url 'wisc_cc_interested' %}" class="btn btn-primary">Interested?</a>
