--- a/wisccc/templates/wisccc/column_response_progress.html
+++ b/wisccc/templates/wisccc/column_response_progress.html
@@ -69,10 +69,10 @@
     {% endif %}
 
     {% else %}
-    {% if record.survey_farm.main_cc_goal_this_year != '' %}
-    <a href="{% url 'wisc_cc_survey2' record.survey_farm.id %}" class="bg-success text-white">2</a>
-    {% else %}
+    {% if record.survey_farm.main_cc_goal_this_year == '' or record.survey_farm.main_cc_goal_this_year is None %}
     <a href="{% url 'wisc_cc_survey2' record.survey_farm.id %}" class="bg-warning text-white">2</a>
+    {% else %}
+    <a href="{% url 'wisc_cc_survey2' record.survey_farm.id %}" class="bg-success text-white">2</a>
     {% endif %}
     {% endif %}
 
