added report links to about page

--- a/wisccc/templates/wisccc/wisc_cc_about.html
+++ b/wisccc/templates/wisccc/wisc_cc_about.html
@@ -9,10 +9,12 @@
         color: #212529;
     }
 </style>
+
 <div class="row justify-content-center">
     <div class="col-lg-8 col-md-10 col-sm-12">
         <div class="card">
             <div class="card-body">
+
                 <h5>Project Overview</h5>
                 <div>
                     <p>
@@ -92,6 +94,58 @@
                             href="https://docs.google.com/document/d/1PkCmpdHs_7nqd-kBTsdpq6fGkciDX8lZpaQ2Xh_NN-Y/edit?usp=sharing"
                             target="_blank" rel="noopener noreferrer">here</a>.
                     </p>
+                    <h5>Publications and Project Reports</h5>
+                    <div>
+                        <p>
+                            <a href="https://www.michaelfields.org/_files/ugd/054bfb_cdc8ac16ad77460c82e953c8ca64db9a.pdf"
+                                target="_blank" rel="noopener noreferrer">
+                                WCCDN 2020-2025 Report
+                            </a>
+                        </p>
+                        <p>
+                            <a href="https://www.michaelfields.org/_files/ugd/054bfb_226883188fe6429686ae93e38b5f808a.pdf"
+                                target="_blank" rel="noopener noreferrer">
+                                WCCDN 2020-2025 Summary
+                            </a>
+                        </p>
+                        <p>
+                            <a href="https://www.frontiersin.org/journals/sustainable-food-systems/articles/10.3389/fsufs.2023.1045769/full"
+                                target="_blank" rel="noopener noreferrer">
+                                Original Research Article
+                            </a>
+                        </p>
+                        <h6>Past Annual Reports</h6>
+                        <p>
+                            <a href="https://www.michaelfields.org/_files/ugd/5952d1_371fce9ceeb54b8699ef1baf5a148dbf.pdf"
+                                target="_blank" rel="noopener noreferrer">
+                                Read the 2024 Season Report
+                            </a>
+                        </p>
+                        <p>
+                            <a href="https://www.michaelfields.org/_files/ugd/5952d1_0b7e09b51de24fd0921d410a048c4af5.pdf"
+                                target="_blank" rel="noopener noreferrer">
+                                Read the 2023 Season Report
+                            </a>
+                        </p>
+                        <p>
+                            <a href="https://cias.wisc.edu/wp-content/uploads/sites/194/2023/06/2023_Full-Citizen-Science-cover-crop-report_.pdf"
+                                target="_blank" rel="noopener noreferrer">
+                                Read the 2022 Season Report
+                            </a>
+                        </p>
+                        <p>
+                            <a href="http://cias.wisc.edu/wp-content/uploads/sites/194/2022/04/CCROP-Report-04.06.22-Final.pdf"
+                                target="_blank" rel="noopener noreferrer">
+                                Read the 2021 Season Report
+                            </a>
+                        </p>
+                        <p>
+                            <a href="http://cias.wisc.edu/wp-content/uploads/sites/194/2021/06/CCROP-Citizen-Science-Report-For-Farmers-2020-v0315.pdf"
+                                target="_blank" rel="noopener noreferrer">
+                                Read the 2020 Season Report
+                            </a>
+                        </p>
+                    </div>
                 </div>
 
             </div>
