--- a/wisccc/templates/wisccc/base_wisccc.html
+++ b/wisccc/templates/wisccc/base_wisccc.html
@@ -32,9 +32,9 @@
       <li class="nav-item" id="nav-map">
         <a class="nav-link" href="{% url 'wisc_cc_map' %}">Map</a>
       </li>
-      <li class="nav-item" id="nav-survey">
+      <!-- <li class="nav-item" id="nav-survey">
         <a class="nav-link" href="{% url 'wisc_cc_survey' %}">Survey</a>
-      </li>
+      </li> -->
       <li class="nav-item" id="nav-about">
         <a class="nav-link" href="{% url 'wisc_cc_about' %}">About</a>
       </li>
