change year to planting year

--- a/wisccc/templates/wisccc/wisc_cc_map.html
+++ b/wisccc/templates/wisccc/wisc_cc_map.html
@@ -201,9 +201,9 @@
             <li class="nav-item" id="nav-map">
                 <a class="nav-link" href="{% url 'wisc_cc_map' %}">Map</a>
             </li>
-            <li class="nav-item" id="nav-survey">
+            <!-- <li class="nav-item" id="nav-survey">
                 <a class="nav-link" href="{% url 'wisc_cc_survey' %}">Survey</a>
-            </li>
+            </li> -->
             <li class="nav-item" id="nav-about">
                 <a class="nav-link" href="{% url 'wisc_cc_about' %}">About</a>
             </li>
@@ -294,7 +294,7 @@
 
             <h4>Filters</h4>
 
-            <span>Year
+            <span>Planting Year
                 <select id="YearFilter" class="YearSelector">
                 </select>
             </span><br>
